# mjlabcpu

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
examples/: download_panda_assets.py
examples/assets/: cartpole.xml
examples/assets/panda_push/: goal_marker.xml  puck.xml
examples/envs/: cartpole.py  panda_push.py
scripts/: train.py  view.py
src/mjlabcpu/: __init__.py
src/mjlabcpu/entity/: __init__.py  data.py  entity.py
src/mjlabcpu/envs/: __init__.py  manager_based_rl_env.py  mjx_env.py
src/mjlabcpu/envs/mdp/: __init__.py  events.py  observations.py  rewards.py  terminations.py
src/mjlabcpu/envs/mdp/actions/: __init__.py  joint_actions.py
src/mjlabcpu/managers/: __init__.py  action_manager.py  command_manager.py  event_manager.py  manager_base.py  observation_manager.py  reward_manager.py  scene_entity_cfg.py  termination_manager.py
src/mjlabcpu/render/: __init__.py  photo_renderer.py
src/mjlabcpu/scene/: __init__.py  scene.py
src/mjlabcpu/sim/: __init__.py  mjx_sim.py  sim.py  sim_state.py
src/mjlabcpu/training/: __init__.py  networks.py  ppo.py  rollout.py
src/mjlabcpu/utils/: __init__.py  math.py  monitor.py
tests/: conftest.py  test_env.py  test_managers.py  test_mjx.py  test_panda_push.py  test_scene.py  test_sim.py  test_training.py
